--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AR Image Tracking</title>
+  <title>Full-Screen AR Camera</title>
   <!-- Include A-Frame and MindAR -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  <link rel="stylesheet" href="./styles.css" />
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    a-scene {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-  <!-- AR Scene -->
+  <!-- Full-Screen AR Scene -->
   <a-scene
     mindar-image="imageTargetSrc: ./targets.mind; autoStart: true; showStats: false;"
     color-space="sRGB"
