--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         width: 100%;
         height: 100%;
       }
+
+      .smooth-animation {
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
     </style>
   </head>
   <body>
@@ -53,6 +66,7 @@
           src="#model1"
           scale="5 5 5"
           position="0 0 0"
+          class="smooth-animation"
           animation-mixer="loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
@@ -63,6 +77,8 @@
           src="#model2"
           scale="0.005 0.005 0.005"
           position="0 0 0.1"
+          class="smooth-animation"
+          animation-mixer="loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
 
@@ -72,6 +88,8 @@
           src="#model3"
           scale="0.005 0.005 0.005"
           position="0 0 0.1"
+          class="smooth-animation"
+          animation-mixer="loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
     </a-scene>
