--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           scale="5 5 5"
           position="0 0 0"
           class="smooth-animation"
-          animation-mixer="loop: repeat; timeScale: 1"
+          animation-mixer="clip: *; loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
 
@@ -78,7 +78,7 @@
           scale="0.005 0.005 0.005"
           position="0 0 0.1"
           class="smooth-animation"
-          animation-mixer="loop: repeat; timeScale: 1"
+          animation-mixer="clip: *; loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
 
@@ -89,7 +89,7 @@
           scale="0.005 0.005 0.005"
           position="0 0 0.1"
           class="smooth-animation"
-          animation-mixer="loop: repeat; timeScale: 1"
+          animation-mixer="clip: *; loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
     </a-scene>
