--- a/index.html
+++ b/index.html
@@ -24,23 +24,10 @@
         width: 100%;
         height: 100%;
       }
-
-      .smooth-animation {
-        animation: fadeIn 1s ease-in-out;
-      }
-
-      @keyframes fadeIn {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
     </style>
   </head>
   <body>
-    <!-- Full-Screen AR Scene -->
+    <!-- Scene for the first .mind file -->
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; autoStart: true; showStats: false;"
       color-space="sRGB"
@@ -50,62 +37,46 @@
       device-orientation-permission-ui="enabled: true"
     >
       <a-assets>
-        <!-- Local Models -->
         <a-asset-item id="model1" src="./models/ELE.glb"></a-asset-item>
-        <a-asset-item id="model2" src="./models/model2.gltf"></a-asset-item>
-        <a-asset-item id="model3" src="./models/model3.gltf"></a-asset-item>
       </a-assets>
 
-      <!-- Camera -->
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Image Targets -->
       <a-entity mindar-image-target="targetIndex: 0">
         <a-gltf-model
           id="model-target-1"
           src="#model1"
           scale="5 5 5"
           position="0 0 0"
-          class="smooth-animation"
           animation-mixer="clip: *; loop: repeat; timeScale: 1"
-          animation-name="walk" 
-          on="model-loaded: playAnimation" <!-- Event to trigger animation after model is loaded -->
-        </a-gltf-model>
+        ></a-gltf-model>
       </a-entity>
+    </a-scene>
 
-      <a-entity mindar-image-target="targetIndex: 1">
+    <!-- Scene for the second .mind file -->
+    <a-scene
+      mindar-image="imageTargetSrc: ./targets2.mind; autoStart: true; showStats: false;"
+      color-space="sRGB"
+      renderer="colorManagement: true, physicallyCorrectLights"
+      embedded
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: true"
+    >
+      <a-assets>
+        <a-asset-item id="model2" src="./models/Lprd.glb"></a-asset-item>
+      </a-assets>
+
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <a-entity mindar-image-target="targetIndex: 0">
         <a-gltf-model
           id="model-target-2"
           src="#model2"
           scale="0.005 0.005 0.005"
           position="0 0 0.1"
-          class="smooth-animation"
           animation-mixer="clip: *; loop: repeat; timeScale: 1"
-          animation-name="idle"
-          on="model-loaded: playAnimation"
-        ></a-gltf-model>
-      </a-entity>
-
-      <a-entity mindar-image-target="targetIndex: 2">
-        <a-gltf-model
-          id="model-target-3"
-          src="#model3"
-          scale="0.005 0.005 0.005"
-          position="0 0 0.1"
-          class="smooth-animation"
-          animation-mixer="clip: *; loop: repeat; timeScale: 1"
-          animation-name="run"
-          on="model-loaded: playAnimation"
         ></a-gltf-model>
       </a-entity>
     </a-scene>
-
-    <script>
-      // Custom function to ensure the animation is played after the model is loaded
-      function playAnimation(event) {
-        const model = event.target;
-        model.setAttribute('animation-mixer', 'clip: *; loop: repeat; timeScale: 1');
-      }
-    </script>
   </body>
 </html>
