--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
+      <a-light type="ambient" intensity="0.5"></a-light>
+      <!-- Soft global light -->
+      <a-light
+        type="directional"
+        position="0 2 1"
+        intensity="1"
+        target="#model-target-2"
+      ></a-light>
+
       <a-entity mindar-image-target="targetIndex: 0">
         <a-gltf-model
           id="model-target-2"
