--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           src="#model1"
           scale="5 5 5"
           position="0 0 0"
-          animation-mixer="clip: *; loop: repeat; timeScale: 1"
+          animation-mixer="clip: szkielet-0|Default; loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
     </a-scene>
