--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       device-orientation-permission-ui="enabled: true"
     >
       <a-assets>
-        <a-asset-item id="model2" src="./models/Lprd.glb"></a-asset-item>
+        <a-asset-item id="model2" src="./models/animalia-leopard-male.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -84,7 +84,7 @@
           scale="0.015 0.015 0.015"
           position="0 0 0"
           rotation="225 0 0"
-          animation-mixer="clip: *; loop: repeat; timeScale: 1"
+          animation-mixer="clip: default; loop: repeat; timeScale: 1"
         ></a-gltf-model>
       </a-entity>
     </a-scene>
