--- a/index.html
+++ b/index.html
@@ -111,10 +111,7 @@
 
       <!-- Container for placing the model -->
       <a-entity id="model-container" visible="false">
-        <a-gltf-model
-          src="#model"
-          scale="0.5 0.5 0.5"
-        ></a-gltf-model>
+        <a-gltf-model src="#model" scale="0.5 0.5 0.5"></a-gltf-model>
       </a-entity>
     </a-scene>
 
