--- a/index.html
+++ b/index.html
@@ -1,160 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR Place Anywhere</title>
-    <!-- Include A-Frame and MindAR -->
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <style>
-      body,
-      html {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Full-Screen AR Camera</title>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  <style>
+    body,
+    html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
 
-      a-scene {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
+    a-scene {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
 
-      .message-container {
-        position: absolute;
-        top: 10%;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 10;
-        text-align: center;
-        font-size: 18px;
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
-        display: none;
-      }
+    #message,
+    #place-button {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 1.5em;
+      color: white;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      display: none;
+    }
 
-      .button-container {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 10;
-        display: none;
-      }
+    #place-button {
+      bottom: 80px;
+    }
+  </style>
+</head>
+<body>
+  <div id="message">Image Identified Successfully!</div>
+  <button id="place-button">Place Model Anywhere</button>
 
-      button {
-        padding: 10px 20px;
-        font-size: 16px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="message-container" id="message">
-      Image identified successfully!
-    </div>
+  <a-scene
+    mindar-image="imageTargetSrc: ./targets.mind; autoStart: true; showStats: false;"
+    color-space="sRGB"
+    renderer="colorManagement: true, physicallyCorrectLights"
+    embedded
+    vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: true"
+  >
+    <a-assets>
+      <a-asset-item id="model1" src="./models/ELE.glb"></a-asset-item>
+    </a-assets>
 
-    <div class="button-container" id="button-container">
-      <button id="place-model">Place Model</button>
-    </div>
+    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-    <a-scene
-      mindar-image="imageTargetSrc: ./targets.mind; autoStart: true; showStats: false;"
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
-      embedded
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: true"
-    >
-      <a-assets>
-        <a-asset-item id="model" src="./models/ELE.glb"></a-asset-item>
-      </a-assets>
+    <a-entity mindar-image-target="targetIndex: 0" id="image-target">
+      <a-gltf-model
+        id="model-target-1"
+        src="#model1"
+        scale="5 5 5"
+        position="0 0 0"
+        animation-mixer="clip: default; loop: repeat; timeScale: 1"
+      ></a-gltf-model>
+    </a-entity>
+  </a-scene>
 
-      <!-- Camera -->
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+  <script>
+    const message = document.getElementById('message');
+    const placeButton = document.getElementById('place-button');
+    const targetEntity = document.getElementById('image-target');
 
-      <!-- Ground plane for manual placement -->
-      <a-plane
-        id="ground"
-        rotation="-90 0 0"
-        width="10"
-        height="10"
-        color="#ccc"
-        position="0 -0.1 0"
-      ></a-plane>
+    // Show message and enable button when target is found
+    targetEntity.addEventListener('targetFound', () => {
+      message.style.display = 'block';
+      placeButton.style.display = 'block';
+    });
 
-      <!-- Initial placement on image target -->
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-entity
-          id="image-detected-indicator"
-          geometry="primitive: sphere; radius: 0.1"
-          material="color: yellow"
-        >
-          <a-gltf-model
-            src="#model"
-            scale="0.5 0.5 0.5"
-            visible="false"
-          ></a-gltf-model>
-        </a-entity>
-      </a-entity>
+    // Hide message when target is lost
+    targetEntity.addEventListener('targetLost', () => {
+      message.style.display = 'none';
+      placeButton.style.display = 'none';
+    });
 
-      <!-- Container for placing the model -->
-      <a-entity id="model-container" visible="false">
-        <a-gltf-model src="#model" scale="0.5 0.5 0.5"></a-gltf-model>
-      </a-entity>
-    </a-scene>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const message = document.getElementById("message");
-        const buttonContainer = document.getElementById("button-container");
-        const placeModelButton = document.getElementById("place-model");
-        const modelContainer = document.getElementById("model-container");
-        const ground = document.getElementById("ground");
-        let modelPlaced = false;
-
-        // Show message when the image is detected
-        const targetIndicator = document.getElementById(
-          "image-detected-indicator"
-        );
-
-        targetIndicator.addEventListener("targetFound", () => {
-          if (!modelPlaced) {
-            message.style.display = "block";
-            buttonContainer.style.display = "flex";
-          }
-        });
-
-        targetIndicator.addEventListener("targetLost", () => {
-          if (!modelPlaced) {
-            message.style.display = "none";
-          }
-        });
-
-        // Place the model anywhere when the button is clicked
-        placeModelButton.addEventListener("click", () => {
-          modelPlaced = true;
-
-          // Hide the message and button
-          message.style.display = "none";
-          buttonContainer.style.display = "none";
-
-          // Show the model at a fixed position
-          modelContainer.setAttribute("visible", true);
-          modelContainer.setAttribute("position", "0 0.2 -1");
-        });
-      });
-    </script>
-  </body>
+    // Allow model to be placed anywhere
+    placeButton.addEventListener('click', () => {
+      targetEntity.setAttribute('mindar-image-target', 'enabled', 'false');
+      alert('You can now move and place the model anywhere.');
+    });
+  </script>
+</body>
 </html>
