--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         modelData = { position, rotation, scale };
 
-        // Stop further tracking
+        // Stop further tracking by removing mindar-image-target
         imageTarget.removeAttribute('mindar-image-target');
       }
     });
