--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <!-- Scene for the first .mind file -->
   <a-scene
-    mindar-image="imageTargetSrc: ./targets1.mind; autoStart: true; showStats: false;"
+    mindar-image="imageTargetSrc: ./targets.mind; autoStart: true; showStats: false;"
     color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights"
     embedded
